<resources>
    <string name="app_name">Songs</string>
    <string name="home_fragment">HOME FRAGMENT</string>
    <string name="favoritos_fragment">FAVORITOS FRAGMENT</string>
    <string name="pesquisa_fragment">PESQUISA FRAGMENT</string>
    <string name="url">https://deezerdevs-deezer.p.rapidapi.com/</string>
    <string name="searchText">Busca</string>
    <string name="favoriteText">Favoritos</string>
    <string name="inputSearch">Músicas, artistas, albuns</string>
    <string name="holderSong">%1$s\n%2$s</string>
    <string name="artist">Músicas de %1$s</string>
    <string name="addPlaylist">Adicionar a playlist</string>
    <string name="seeArtist">Ver artista</string>
    <string name="listenDeezer">Escutar no Deezer</string>
    <string name="favoriteMusic">Favoritar música</string>
    <string name="removeFavorite">Remover favorito</string>
    <string name="selectPlaylist">Selecione a playlist que quer adicionar:</string>
    <string name="save">Salvar</string>
    <string name="createPlaylist">Criar Playlist</string>
    <string name="playlistName">Nome da playlist</string>
    <string name="cancel">Cancelar</string>
    <string name="playlists">Playlists</string>
    <string name="deleteConfirmation">Deseja mesmo excluir a playlist?</string>
    <string name="login">LOGIN</string>
    <string name="whatCanIHelpYou">Em que posso ajudar?</string>
    <string name="register">CADASTRE-SE</string>
    <string name="removeFromPlaylist">Remover da playlist</string>
    <string name="title_activity_share_playlist_maps">Map</string>
    <string name="sharedConfirmationTitle">Deseja fazer uma playlist compartilhada com %1$s?</string>
    <string name="titleUserName">Por favor, nos informe seu primeiro e último nome</string>
    <string name="textHere">Digite aqui</string>
    <string name="confirm">Confirmar</string>
    <string name="createPlaylistText">Você não possui nenhuma playlist. Deseja criar uma?</string>
    <string name="locationRequest">Para usar essa funcionalidade, é necessário permitir a sua localização.\nDeseja permitir?</string>
    <string name="permissionFavorites">Clique nos botões abaixo para permitir ou negar o compartilhamento das músicas favoritas</string>
    <string name="deny">Negar</string>
    <string name="allow">Permitir</string>
    <string name="addSharedPlaylist">Adicionar a playlist compartilhada</string>
    <string name="addMusicToPlaylist">ADICIONE UMA MÚSICA NA PLAYLIST!</string>
    <string name="textMessage">Digite uma mensagem</string>
    <string name="createPlaylist2">CRIE UMA PLAYLIST</string>
    <string name="geo">Geo</string>
    <string name="hi">Hi</string>
    <string name="songsAssistant">Assistente do Songs</string>
    <string name="yourPlaylistFavorite">Suas playlists de músicas favoritas estão aqui!</string>
    <string name="name">NOME</string>

</resources>
