<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.dialog_fragment.SelectPlaylistDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backSelectPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyDarken4">


        <TextView
            android:id="@+id/titleSelectPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/caveat_brush"
            android:text="@string/selectPlaylist"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/noPlaylistSelectPlaylist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerSelectPlaylist"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/inputs"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            app:layout_constraintBottom_toTopOf="@+id/createSelectPlaylist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noPlaylistSelectPlaylist" />

        <Button
            android:id="@+id/saveSelectPlaylist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/botoes"
            android:fontFamily="@font/caveat_brush"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createSelectPlaylist" />

        <TextView
            android:id="@+id/noPlaylistSelectPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/caveat_brush"
            android:text="@string/createPlaylistText"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/spinnerSelectPlaylist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleSelectPlaylist" />

        <Button
            android:id="@+id/createSelectPlaylist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/botoes2"
            android:fontFamily="@font/caveat_brush"
            android:text="@string/createPlaylist"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/saveSelectPlaylist"
            app:layout_constraintEnd_toStartOf="@+id/cancelSelectPlaylist"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSelectPlaylist" />

        <Button
            android:id="@+id/cancelSelectPlaylist"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/cancel_button"
            android:fontFamily="@font/caveat_brush"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/createSelectPlaylist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/createSelectPlaylist"
            app:layout_constraintTop_toTopOf="@+id/createSelectPlaylist" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>